compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__echo_followed_by_no_expression_4.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2921
expression: "\n  pub fn main() {\n    \"wibble\" <> echo\n  }\n"
snapshot_kind: text
---
----- SOURCE CODE

  pub fn main() {
    "wibble" <> echo
  }


----- ERROR
error: Invalid echo use
  ┌─ /src/one/two.gleam:3:17
  │
3 │     "wibble" <> echo
  │                 ^^^^ I was expecting a value after this

The `echo` keyword should be followed by a value to print.
